--- a/package.json
+++ b/package.json
@@ -1,15 +1,48 @@
 {
-  "name": "my-vite-website",
+  "name": "codejedi-portfolio",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "echo \"No tests specified\" && exit 0"
+    "build": "next build",
+    "dev": "next dev --turbopack",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@notionhq/client": "latest",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.3.1",
+    "fs": "latest",
+    "lucide-react": "^0.454.0",
+    "next": "^16.1.1",
+    "next-themes": "latest",
+    "path": "latest",
+    "qrcode.react": "latest",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "url": "latest",
+    "zod": "latest"
   },
   "devDependencies": {
-    "vite": "^6.1.0"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.7.0",
+    "eslint-config-next": "^16.1.3",
+    "postcss": "^8.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": "24.x"
+  },
+  "pnpm": {
+    "allowScripts": {
+      "sharp": true
+    }
   }
 }
