Update deployment configuration and API integration for GitHub Pages
- Changed the API URL in GitHub Actions workflow to point to the new external API host.
- Removed Vercel-specific configurations and references from various documentation files.
- Updated the Certificates component to use a new background image.
- Refactored API debugging documentation to reflect changes in API endpoint configuration.
- Simplified build modes documentation, emphasizing static export for GitHub Pages.
- Cleaned up unused Vercel configurations and environment variables.
- Adjusted README to clarify deployment on GitHub Pages instead of Vercel.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,6 +1,6 @@
 # GitHub Pages Frontend Deployment Workflow
 # Builds static Next.js site and deploys to GitHub Pages
-# Frontend calls Vercel backend for API routes
+# Frontend calls an external API host defined by NEXT_PUBLIC_API_URL
 #
 name: Deploy Next.js site to Pages
 
@@ -63,7 +63,7 @@ jobs:
       - name: Build static frontend with Next.js
         run: pnpm run build
         env:
-          NEXT_PUBLIC_API_URL: https://codejedi-ai.vercel.app
+          NEXT_PUBLIC_API_URL: https://api.codejedi.ai
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
